panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_function__test_error_function_definition_with_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_error_function_definition_with_initialiser.c
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition f~1 `fn() -> int` 42))))

----- stderr -----
