panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__decl_in_function__test_error_lengthof_nonarray.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_error_lengthof_nonarray.c
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression (lengthof `fn(∅: int) -> int`))
         (return (lengthof 42)))))

----- stderr -----
